--- a/app/src/main/res/layout/activity_student_homepage.xml
+++ b/app/src/main/res/layout/activity_student_homepage.xml
@@ -53,11 +53,11 @@
             android:text="借阅"
             android:textSize="20sp"/>
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <ListView
+        android:id="@+id/st_home_list_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+    </ListView>
 
 
 </LinearLayout>
