--- a/app/src/main/res/layout/activity_login_staff.xml
+++ b/app/src/main/res/layout/activity_login_staff.xml
@@ -58,7 +58,8 @@
         <CheckBox
             android:id="@+id/rememberPassStaff_id"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
