--- a/app/src/main/res/layout/activity_login_student.xml
+++ b/app/src/main/res/layout/activity_login_student.xml
@@ -57,13 +57,14 @@
         android:layout_height="wrap_content">
         <CheckBox
             android:id="@+id/rememberPassStudent_id"
+            android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="记住密码"/>
+            android:text="自动登录"/>
     </LinearLayout>
     <Button
         android:id="@+id/commitStudent_id"
